2004-05-29 23:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm testInterface:] removed conditional.  The services
	menu is always set to nil when testing. [Gorm endTesting:] added
	a NS_DURING block to catch any issues with resetting the services menu.
	This prevents Gorm from crashing, if there's a problem.  Since the 
	menu is set to nil and then reset there shouldn't be an issue.
	
2004-05-29 16:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument attachObject:] added code
	to automatically mark a menu being attached as the 
	windows/services menu if it has the appropriate title.
	Also changed [GormDocument detachObject:] added code to
	remove the menu as the services/windows menu if it's detached
	from the document.
	
2004-05-29 08:56 Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Palettes/2Controls/main.m: Had some DOS formatted lines.   Simply
	converted to UNIX format.
	* Palettes/3Containers/main.m: Changed the default border type
	for both NSTableView and NSOutlineView to NSBezelBorder in 
	-finishInstantiate.
	* Palettes/4Data/main.m: Changed the default border type for the
	NSTextView to NSBezelBorder in -finishInstantiate.
	
2004-05-29 07:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/4Data/GormNSComboBoxInspector.gorm: Improved the layout
	a little.
	
2004-05-28 21:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Corrected a problem the the renameClassNamed:
	newName: method.   It was releasing the classInformation and causing 
	a crash.
	
2004-05-25 07:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm testInterface:] added code to save the services
	menu and set the current one to nil, if one is not defined in the
	.gorm file.  This prevents the annoying "Services Menu not in main
	menu" warning.
	* GormPrivate.h: Added servicesMenu ivar.
	
2004-05-24 10:22 Gregory John Casamento <greg_casamento@yahoo.com>
