@@ -1,5 +1,13 @@
 2004-05-29 23:10 Gregory John Casamento <greg_casamento@yahoo.com>
 
+	* GormInspectorsManager.m: [GormConnectionsInspector _internalCall:]
+	The search for an existing control connection was leaving the
+	con variable set to a outlet connection (occasionally) which caused
+	later logic to not properly set the action list and prevented the user
+	from selecting an action.
+	
+2004-05-29 23:10 Gregory John Casamento <greg_casamento@yahoo.com>	
+
 	* Gorm.m: [Gorm testInterface:] removed conditional.  The services
 	menu is always set to nil when testing. [Gorm endTesting:] added
 	a NS_DURING block to catch any issues with resetting the services menu.
